--- a/notestakingapp/src/app/components/Styles/Navbar.module.css
+++ b/notestakingapp/src/app/components/Styles/Navbar.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .N_Container {
     display: flex;
     align-items: center;
@@ -10,12 +12,29 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+.Title {
+    font-family: "Pacifico", cursive;
+    font-weight: bold !important;
+    font-weight: bold;
+    background: #00FF00;
+    background: linear-gradient(to left, #00FF00 0%, #00FFFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .Menus {
     display: flex;
     list-style: none;
 
     &>li {
-        padding-left: 20px;
+        padding-left: 50px;
+        & > a{
+            color: yellow;
+            font-weight: bold;
+        }
+        & > a:hover{
+            text-decoration: underline;
+        }
     }
 
     padding-left: 20px;
