--- a/notestakingapp/src/app/Styles/Home.module.css
+++ b/notestakingapp/src/app/Styles/Home.module.css
@@ -4,4 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
 }
