--- a/notestakingapp/src/app/Styles/View.module.css
+++ b/notestakingapp/src/app/Styles/View.module.css
@@ -1,6 +1,8 @@
 .Container{
+    height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
 }
 
